--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "add": "^2.0.6",
     "antd": "^5.8.6",
     "axios": "^1.5.0",
+    "history": "^5.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
