--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "add": "^2.0.6",
     "antd": "^5.8.6",
     "axios": "^1.5.0",
+    "date-fns": "^2.30.0",
     "history": "^5.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-multi-carousel": "^2.8.4",
+    "react-pdf": "^7.3.3",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.15.0",
     "universal-cookie": "^6.1.1",
