--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "add": "^2.0.6",
     "antd": "^5.8.6",
     "axios": "^1.5.0",
+    "chart.js": "^4.4.0",
     "date-fns": "^2.30.0",
     "history": "^5.3.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-multi-carousel": "^2.8.4",
